[package]
name = "mimir-files"
version = "0.1.0"
edition = "2024"
description = "File server for Mimir messenger. Provides all file sending in Mimir."
authors = ["Revertron"]

[dependencies]
ygg_stream = { path = "../ygg_stream" }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
getopts = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"