[package]
name = "mimir-files"
version = "0.2.0"
edition = "2024"
description = "File server for Mimir messenger. Provides all file sending in Mimir."
authors = ["Revertron"]
license = "MPL-2.0"

[dependencies]
ygg_stream = { git = "https://github.com/Revertron/ygg_stream", tag = "v0.2.0" }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.11.0"
hex = "0.4"
getopts = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"